# mif-spec

./: .gitignore  CONTRIBUTING.md  README.md  server.json
.github/workflows/: pages.yml  publish.yml  validate.yml
docs/: _config.yml  adapters.md  index.md  mcp.md  npm.md  python.md  spec.md
examples/: demo.py  full.mif.json
npm/: package.json
npm/schema/: mif-v2.schema.json
npm/src/: adapters.ts  cli.ts  index.ts  models.ts  test.ts  validate.ts
python/: pyproject.toml
python/mif/: __init__.py  adapters.py  cli.py  mcp_server.py  models.py  registry.py
python/mif/schema/: mif-v2.schema.json
python/tests/: conftest.py  test_adapters.py  test_cli.py  test_models.py  test_registry.py  test_regression.py
spec/: mif-v2.md
