[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mif-tools"
version = "0.2.0"
description = "MIF (Memory Interchange Format) — vendor-neutral memory portability for AI agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Varun Sharma", email = "varun29ankus@gmail.com"},
]
keywords = ["ai", "memory", "interchange", "mcp", "agents", "portability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
validate = ["jsonschema>=4.20.0"]
mcp = ["mcp>=1.0"]

[project.scripts]
mif = "mif.cli:main"

[project.urls]
Homepage = "https://github.com/varun29ankuS/mif-spec"
Repository = "https://github.com/varun29ankuS/mif-spec"
Issues = "https://github.com/varun29ankuS/mif-spec/issues"

[tool.setuptools.packages.find]
include = ["mif*"]

[tool.setuptools.package-data]
mif = ["schema/*.json"]
